--- a/AliWolfSpider/WebRoot/WEB-INF/classes/Account.properties
+++ b/AliWolfSpider/WebRoot/WEB-INF/classes/Account.properties
@@ -1,9 +1,9 @@
-weibo_username=alilang197@163.com
-weibo_passwd=alilang123456
-screenName=alilang197
-token=2.00MZ4scF0v7A6Ba3d1410421yN8AYD
-#weibo_username=ina24@qq.com
-#weibo_passwd=147258
-#screenName=\u516C\u6D4B007
-#token=2.00R6PicF0TAL9U3a85f1e27baeUb9E
-init=0
+#weibo_username=alilang197@163.com
+#weibo_passwd=alilang123456
+#screenName=alilang197
+#token=2.00MZ4scF0v7A6Ba3d1410421yN8AYD
+weibo_username=ina24@qq.com
+weibo_passwd=147258
+screenName=\u516C\u6D4B007
+token=2.00R6PicF0TAL9U3a85f1e27baeUb9E
+init=1
